src/app/src/tests/snapshots/audit_events_test__audit_credential_denied.snap
---
source: tests/audit_events_test.rs
assertion_line: 90
expression: event
---
{
  "id": "[event_id]",
  "timestamp": "[timestamp]",
  "user_id": "guest_user",
  "action": "credential_accessed",
  "resource_id": "[credential_id]",
  "result": {
    "denied": {
      "reason": "Insufficient permissions"
    }
  },
  "metadata": {
    "attempted_service": "Claude API"
  }
}
