src/app/src/tests/snapshots/audit_events_test__audit_custom_action.snap
---
source: tests/audit_events_test.rs
assertion_line: 157
expression: event
---
{
  "id": "[event_id]",
  "timestamp": "[timestamp]",
  "user_id": null,
  "action": {
    "custom": "Data Migration Completed"
  },
  "resource_id": null,
  "result": "success",
  "metadata": {
    "records_migrated": "10000",
    "source_version": "0.9.0",
    "target_version": "1.0.0"
  }
}
